# osmstats-rs

./: Cargo.toml  bench.txt
protos/: osmpbf.proto
src/: main.rs  osm_pbf.rs
